--- a/assignments/HW3/report/report.tex
+++ b/assignments/HW3/report/report.tex
@@ -118,13 +118,27 @@ As we can see from the histogram in figure \ref{fig:queue_histogram}, the holdba
 \subsection{V for Vector}
 To further improve the logging order I have implemented a vector clock. The vector clock is a map that keeps track of the logical time of each node in the system. Every time a message is sent, the sender increments its own clock and includes the updated clock in the message. When a message is received, the receiver updates its own clock by taking the maximum of its own clock and the received clock.
 
+For example when node mary sends a message to node sara, the message will contain the following vector clock:
+\begin{mylisting}
+{"mary": 5, "sara": 2, "lorenzo": 3}
+\end{mylisting}
+
+When sara that let's say has the following vector clock:
+\begin{mylisting}
+{"mary": 3, "sara": 4, "lorenzo": 1}
+\end{mylisting}
+receives the message from mary, it will update its own clock to be:
+\begin{mylisting}
+{"mary": max(5, 3) = 5, "sara": (4 + 1) = 5, "lorenzo": max(3, 1) = 3}
+\end{mylisting}
+
 Using the script \texttt{check\_vector.py}, I have verified that the vector clock is working correctly and that the messages are logged in the correct order.
 
 Sometimes it happens that a message appears to received without being sent first. This happens because of the Jitter introduced between the Send and the Log call. Anyhow this doesn't affect the correctness of the logging order or the causality of the messages.
 
 \section{Conclusions}
 
-To wrap it up I have implemented a logger that uses logical time to order messages in a distributed system. The logger is able to handle messages that are received out of order and log them in the correct order based on their logical timestamps. The implementation of a holdback queue and a vector clock further improves the logging order and ensures that the messages are logged in a causally consistent manner.
+To wrap it up I have implemented a logger that uses logical time and vector time to order messages in a distributed system. The logger is able to handle messages that are received out of order and log them in the correct order based on their logical timestamps.
 
 For further improvements we could handle a better way of generating unique message IDs to avoid collisions. We could also implement a more efficient way of checking the holdback queue for safe messages to log, for example by using a priority queue.
 
