--- a/assignments/HW4/report/report.tex
+++ b/assignments/HW4/report/report.tex
@@ -31,12 +31,17 @@
 The main goal of the assignment was to implement a group membership service providing atomic multicasting in view syncrony, while also tolerating crash failures.
 
 \section{Main problems and solutions}
-\subsection{Group communication}
-Group communication is managed using a \textbf{leader-based protocol}, which maintains a consistent view of group membership for all participants. The designated \textbf{leader} multicasts messages to all group members and coordinates join requests from peers. When a new peer wishes to join, the leader updates the group view and disseminates it to all members, ensuring everyone has the latest membership information. The \textbf{view} is structured as a tuple: the first element contains the list of all \textit{process identifiers in the group}, and the second element lists the \textit{process identifiers at the application layer}.
+\subsection{Dancing together}
+Group communication in our implementation relies on a leader-based protocol. The leader is responsible for maintaining a consistent view of the group membership and multicasting messages to all members. When a peer wants to join, it sends a request to the leader, who then updates the group view and shares it with everyone. The view consists of two parts: the list of all \textbf{process identifiers in the group}, and the list of \textbf{process identifiers at the application layer}.
 
-On the other end the slaves are responsible for forwarding messages to 
+Peers that are not the leader act as slaves. They forward join requests and multicast instructions to the leader, and also relay messages from the leader to the application layer. This setup ensures that all group members have the same view and that messages are delivered reliably, even if some processes crash.
 
+Using our first implementation gms1, we can see that the group communication works as expected and all the peers change the colors in sync. However if the leader crashes the whole system stops working.
 
+\subsection{Handling failures to keep on dancing}
+To address the issue of leader crashes, we use monitors to detect failures. Each peer monitors the leader, and if it detects that the leader has crashed, it initiates a leader election process to select a new leader from the remaining members. The new leader then takes over the responsibilities of maintaining the group view and multicasting messages.
+
+With this system in place we can see that if the leader crashes, one of the slaves takes over and the system continues to function without interruption. The group members continue to change colors in sync, demonstrating that the group communication is resilient to leader failures.
 
 \section{Conclusions}
 
