Added conclusion to subsect

--- a/assignments/HW4/report/report.tex
+++ b/assignments/HW4/report/report.tex
@@ -43,6 +43,10 @@ To address the issue of leader crashes, we use monitors to detect failures. Each
 
 With this system in place we can see that if the leader crashes, one of the slaves takes over and the system continues to function without interruption. The group members continue to change colors in sync, demonstrating that the group communication is resilient to leader failures.
 
+The implementation of gms2 shows the presented improvements and the system can handle leader crashes effectively.
+
+\subsection{Showing that we cannot dance}
+
 \section{Conclusions}
 
 \end{document}
